update pom and login test example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src", "./.eslintrc.js", "./playwright.config.ts", "src/tests"],
+  "include": ["src", "./.eslintrc.js", "./playwright.config.ts", "src/e2e"],
   "exclude": ["node_modules", "dist"]
 }
