--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 
 # Playwright
 node_modules/
-/test-results/
-/playwright-report/
+test-results/
+playwright-report/
 /blob-report/
 /playwright/.cache/
-/logs/
+logs/
 
 .env*
 .flaskenv*
 !.env.project
 !.env.vault
+src/.DS_Store
+src/.DS_Store
