--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 
 # Playwright
-node_modules/
-test-results/
-playwright-report/
+/node_modules
+/test-results
+/playwright-report/
 /blob-report/
 /playwright/.cache/
-logs/
+/logs
 
 .env*
 .flaskenv*
