--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript-eslint": "^8.31.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.8.0",
     "dotenv": "^16.5.0",
     "ts-node": "^10.9.2"
   }
