--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
+    "cross-env": "^10.0.0",
     "dotenv": "^16.5.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "winston": "^3.17.0"
   }
 }
